perkplexserver/nginx-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`perkplexserver.com`)
    middlewares:
      - name: https
      - name: compress
    kind: Rule
    services:
    - name: nginx
      port: 4080
  tls:
    secretName: default-ssl-cert
