perkplexserver/ombi-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ombi
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ombi.perkplexserver.com`)
    middlewares:
      - name: compress
    kind: Rule
    services:
    - name: ombi
      port: 3579
  tls:
    secretName: default-ssl-cert
