perkplexserver/organizr-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organizr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`organizr.perkplexserver.com`)
      middlewares:
        - name: https
        - name: compress
      kind: Rule
      services:
        - name: organizr
          port: 80
  tls:
    secretName: default-ssl-cert
