perkplexserver/pihole-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.perkplexserver.com`)
      middlewares:
        - name: compress
      kind: Rule
      services:
        - name: pihole-web
          port: 80
  tls:
    secretName: pihole-ssl-cert
