perkplexserver/varken-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: varken
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`varken.perkplexserver.com`)
    middlewares:
      - name: compress
    kind: Rule
    services:
    - name: varken
      port: 3000
  tls:
    secretName: default-ssl-cert
